--- a/Pages/password.cshtml
+++ b/Pages/password.cshtml
@@ -23,11 +23,10 @@
 
         <form id="passwordForm" method="post">
             <div class="form-group">
-                <input type="password" class="form-input" name="Input.Password" id="password" placeholder="New Password" required min-length="6">
-                <div class="error-message">Password must be atleast 6 characters long</div>
+                <input type="password" class="form-input" name="Input.Password" id="password" placeholder="New Password" required minlength="6" oninput="document.getElementById('confirmpassword').pattern = this.value.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');">
             </div>
             <div class="form-group">
-                <input type="password" class="form-input" name="Input.ConfirmPassword" id="confirmpassword" placeholder="Confirm Password" required min-length="6">
+                <input type="password" class="form-input" name="Input.ConfirmPassword" id="confirmpassword" placeholder="Confirm Password" required minlength="6">
                 <div class="error-message" id="confirmError">Passwords do not match</div>
             </div>
             <div class="confirm-button-wrapper">
