--- a/Pages/setNewPassword.cshtml
+++ b/Pages/setNewPassword.cshtml
@@ -9,13 +9,12 @@
     var isLoggedIn = userId != null;
 }
 @section Styles {
-    <link rel="stylesheet" href="/css/password.css" />
+    <link rel="stylesheet" href="/css/setNewPassword.css" />
 }
 
 <!DOCTYPE html>
 <html lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="forgotPass.css">
 
     <div class="forgot-pass-container">
         <h1 class="forgot-pass-hdr">Change Password</h1>
